More progress on v3

--- a/_templates/base.html
+++ b/_templates/base.html
@@ -13,7 +13,7 @@
 
   <link rel="shortcut icon" href="/favicon.ico">
 
-  <link rel="stylesheet" type="text/css" href="{{theme.css}}" />
+  <link rel="stylesheet" type="text/css" href="{{css}}" />
 </head>
 <body class="{% block body_class %}{% endblock %}">
 
@@ -42,6 +42,6 @@
     </p>
   </footer>
 
-  <script type="text/javascript" src="{{theme.js}}"></script>
+  <script type="text/javascript" src="{{js}}"></script>
 </body>
 </html>
